fix: Ensure portfolio images don't get too tall.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -802,6 +802,7 @@ figcaption {
 .portfolio-panel-image {
   box-shadow: none;
   max-width: 100%;
+  max-height: 95vh;
   margin: 0;
 }
 
